--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -3,9 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <title>Split Project</title>
-</head>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <style>
+    body {font-family: "Arial";}
+    h1, h2, h3, h4, h5, h6 {
+      font-family: "Playfair Display";
+      letter-spacing: 5px;
+    }
+    </style>
 <body>
-    <h1>Gerador de PDF</h1>
+
+    <!-- Navbar -->
+    <nav class="w3-top">
+      <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
+        <a href="#" class="w3-bar-item w3-button">VooSpax Split</a>
+        <!-- Right-sided navbar links. Hide them on small screens -->
+        <div class="w3-right w3-hide-small">
+          <a href="#" class="w3-bar-item w3-button">Sobre Nós</a>
+          <a href="#" class="w3-bar-item w3-button">Contato</a>
+          <a href="#" class="w3-bar-item w3-button">Acessar Conta</a>
+        </div>
+      </div>
+    </nav>
+
+<!-- Header -->
+<header></header>
+
+<main class="w3-content w3-purple" style="max-width:1100px">
+
+  <section class="w3-row w3-center w3-padding-64">
+    <div class="w3-padding-large">
+      <h1 class="w3-center">Gerador de E-book</h1><br>
+    </div>
+  </section>
+
+</main>
+
+<!-- Footer -->
+<footer class="w3-center w3-light-grey w3-padding-32">
+    <p>VooSpax Split Project</p>
+</footer>
 
 </body>
 </html>
