--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -35,6 +35,56 @@
     <div class="w3-padding-large">
       <h1 class="w3-center">Gerador de E-book</h1><br>
     </div>
+      <div>
+          <h3 class="w3-center">teste escrita</h3>
+          <p class="w3-center">
+              {{ b }}
+          </p>
+      </div>
+  </section>
+  <section class="w3-row w3-padding-64 w3-red">
+      <div>
+          <h3 class="w3-center">b.spine</h3>
+          <p class="w3-center">
+              {{ b.spine }}
+          </p>
+      </div>
+      <div>
+          <h3 class="w3-center">b.templates</h3>
+          <p class="w3-center">
+              {{ b.templates }}
+          </p>
+      </div>
+      <div>
+          <h3 class="w3-center">b.title</h3>
+          <p class="w3-center">
+              {{ b.title }}
+          </p>
+      </div>
+      <div>
+          <h3 class="w3-center">b.items</h3>
+          {% for item in b.items %}
+            <p class="w3-center">
+              {{ item }}
+            </p>
+          {% endfor%}
+      </div>
+      <div>
+          <h3 class="w3-center">b.toc</h3>
+          {% for item in b.toc %}
+            <p class="w3-center">
+              {{ item }}
+            </p>
+          {% endfor%}
+      </div>
+      <div>
+          <h3 class="w3-center">b.pages</h3>
+          <p class="w3-center">
+              {{ b.pages }}
+          </p>
+      </div>
+      <div>
+
   </section>
 
 </main>
