--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -38,18 +38,7 @@
   </section>
   <section class="w3-row w3-padding-64 w3-red">
       <div>
-          <h3 class="w3-center">b.title</h3>
-          <p class="w3-center">
-              {{ b.title }}
-          </p>
-      </div>
-      <div>
-          <h3 class="w3-center">b.items</h3>
-          {% for item in items %}
-            <p class="w3-center">
-              {{ item }}
-            </p>
-          {% endfor%}
+        {{ content }}
       </div>
   </section>
 
