--- a/backend/book/templates/book/book_detail.html
+++ b/backend/book/templates/book/book_detail.html
@@ -26,9 +26,12 @@
 
   <section class="w3-row w3-center w3-padding-64">
     <div class="w3-padding-large">
-      <h1 class="w3-center">Gerador de E-book</h1><br>
-      <a href="{% url 'book:list' %}" class="w3-bar-item w3-btn">Meus Livros</a>
-      <a href="#" class="w3-bar-item w3-btn">Criar Novo</a>
+        <div class="col-5">
+            <img src="/media/{{ book.cover }}" alt="" style="width: 18rem;">
+        </div>
+        <h4 class="w3-center">Nome: {{ book.title }}</h4><br>
+        <h4 class="w3-center">Descrição: {{ book.description }}</h4><br>
+        <h4 class="w3-center">Criado em: {{ book.created|date:'l - d, M, Y - H:i' }}h</h4><br>
     </div>
   </section>
 
