--- a/backend/book/templates/book/book_form.html
+++ b/backend/book/templates/book/book_form.html
@@ -11,7 +11,7 @@
     <!-- Navbar -->
     <nav class="w3-top">
       <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
-        <a href="{% url 'index' %}" class="w3-bar-item w3-btn">VooSpax Split</a>
+        <a href="#" class="w3-bar-item w3-btn">VooSpax Split</a>
         <!-- Right-sided navbar links. Hide them on small screens -->
         <div class="w3-right w3-hide-small">
           <a href="#" class="w3-bar-item w3-btn">Sobre Nós</a>
@@ -26,9 +26,11 @@
 
   <section class="w3-row w3-center w3-padding-64">
     <div class="w3-padding-large">
-      <h1 class="w3-center">Gerador de E-book</h1><br>
-      <a href="{% url 'book:list' %}" class="w3-bar-item w3-btn">Meus Livros</a>
-      <a href="{% url 'book:new_book' %}" class="w3-bar-item w3-btn">Criar Novo</a>
+        <div class="">
+          <form action="">
+            {{form}}
+          </form>
+        </div>
     </div>
   </section>
 
