--- a/backend/book/templates/book/book_form.html
+++ b/backend/book/templates/book/book_form.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+{% load crispy_forms_tags %}
+{% load widget_tweaks %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -24,11 +26,15 @@
 
 <main class="w3-content w3-purple" style="max-width:1100px">
 
-  <section class="w3-row w3-center w3-padding-64">
+  <section class="w3-row w3-padding-64">
     <div class="w3-padding-large">
         <div class="">
-          <form action="">
-            {{form}}
+          <form method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <button type="submit">
+                Enviar
+            </button>
           </form>
         </div>
     </div>
